# options_put_spread_engine

./: .gitignore  README.md  pyproject.toml
config/: default.yaml  risk_limits.yaml  symbols.yaml
docs/: forensic_end_to_end_audit.md  live_pilot_runbook.md
src/options_engine/: __init__.py  main.py
src/options_engine/backtest/: __init__.py  engine.py
src/options_engine/config/: __init__.py  loader.py
src/options_engine/data/: __init__.py  data_quality.py  market_data.py  option_chain.py
tests/: test_audit_log.py  test_backtest.py  test_config_loader.py  test_daily_report.py  test_data_quality.py  test_database_schema.py  test_eligibility.py  test_exits.py  test_fill_tracker.py  test_kill_switch.py  test_live_pilot.py  test_live_pilot_operations.py  test_live_pilot_readiness.py  test_main.py  test_market_data.py  test_option_chain.py  test_paper_workflow.py  test_pilot_demo_packet.py  test_pilot_release_gate.py  test_portfolio_heat_engine.py  test_position_monitor.py  test_position_recorder.py  test_pre_pilot_audit_review.py  test_regime_classifier.py  test_risk_controls.py  test_risk_sizing.py  test_scaffold.py  test_spread_scanner.py  test_ticket.py  test_trade_eligibility.py  test_utils.py
tests/fixtures/: bad_dte_option_chain.csv  bad_option_type_option_chain.csv  malformed_fills.csv  malformed_ohlcv.csv  malformed_option_chain.csv  missing_ask_option_chain.csv  missing_bid_option_chain.csv  missing_columns_fills.csv  missing_columns_ohlcv.csv  missing_columns_option_chain.csv  sample_fills.csv  sample_ohlcv.csv  sample_option_chain.csv
(+33 files in other folders)
